--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   "homepage": "https://github.com/rath-prak/salmon#readme",
   "devDependencies": {
     "browser-sync": "^2.14.0",
+    "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-browserify": "^0.5.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "gutil": "^1.6.4"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
