--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/rath-prak/salmon#readme",
   "devDependencies": {
+    "apache-server-configs": "^2.14.0",
     "browser-sync": "^2.14.0",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-browserify": "^0.5.1",
+    "gulp-cssmin": "^0.1.7",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
