--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "salmon",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,16 +18,11 @@
   "homepage": "https://github.com/rath-prak/salmon#readme",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
-    "browser-sync": "^2.14.0",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "gutil": "^1.6.4"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.0",
+    "babel-preset-es2015": "^6.22.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "jquery": "^3.1.1"
