--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/rath-prak/salmon#readme",
   "devDependencies": {
     "apache-server-configs": "^2.14.0",
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.14.0",
     "browserify": "^13.3.0",
