--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
-    "particles.js": "^2.0.0"
+    "particles.js": "^2.0.0",
+    "pixi.js": "^4.4.0"
   }
 }
